--- a/app/src/main/res/layout/home_01.xml
+++ b/app/src/main/res/layout/home_01.xml
@@ -75,59 +75,83 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/home_01_recommend_01"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="@color/trans"
             android:minHeight="20dp"
             android:text="#베스트셀러"
             android:textColor="@color/navy"
-            app:layout_constraintBottom_toBottomOf="@+id/button3"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintBottom_toBottomOf="@+id/home_01_recommend_02"
+            app:layout_constraintEnd_toStartOf="@+id/home_01_recommend_02"
             app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/button3" />
+            app:layout_constraintTop_toTopOf="@+id/home_01_recommend_02" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/home_01_recommend_02"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
             android:layout_marginTop="5dp"
             android:background="@color/trans"
             android:minHeight="20dp"
             android:text="#새로 나온 책"
-            app:layout_constraintEnd_toStartOf="@+id/button4"
+            app:layout_constraintEnd_toStartOf="@+id/home_01_recommend_03"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button2"
+            app:layout_constraintStart_toEndOf="@+id/home_01_recommend_01"
             app:layout_constraintTop_toBottomOf="@+id/up_line" />
 
         <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/home_01_recommend_03"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="@color/trans"
             android:minHeight="20dp"
-            android:text="#TV에 나온 그 책"
-            app:layout_constraintBottom_toBottomOf="@+id/button3"
+            android:text="#추천 도서"
+            app:layout_constraintBottom_toBottomOf="@+id/home_01_recommend_02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button3"
-            app:layout_constraintTop_toTopOf="@+id/button3" />
+            app:layout_constraintStart_toEndOf="@+id/home_01_recommend_02"
+            app:layout_constraintTop_toTopOf="@+id/home_01_recommend_02" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/home_01_RE"
+            android:id="@+id/home_01_RE_01"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/down_line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button3">
+            app:layout_constraintTop_toBottomOf="@+id/home_01_recommend_02">
 
         </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/home_01_RE_02"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/down_line"
+            app:layout_constraintEnd_toEndOf="@+id/home_01_RE_01"
+            app:layout_constraintStart_toStartOf="@+id/home_01_RE_01"
+            app:layout_constraintTop_toTopOf="@+id/home_01_RE_01">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/home_01_RE_03"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/down_line"
+            app:layout_constraintEnd_toEndOf="@+id/home_01_RE_01"
+            app:layout_constraintStart_toStartOf="@+id/home_01_RE_01"
+            app:layout_constraintTop_toTopOf="@+id/home_01_RE_01" />
 
         <View
             android:id="@+id/down_line"
