--- a/app/src/main/res/layout/home_01_re.xml
+++ b/app/src/main/res/layout/home_01_re.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="2dp"
@@ -18,72 +19,79 @@
         <ImageButton
             android:id="@+id/book_image_B"
             android:layout_width="200dp"
-            android:layout_height="270dp"
+            android:layout_height="280dp"
+            android:layout_marginTop="10dp"
             android:background="@color/trans"
             android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline15"
-            app:layout_constraintVertical_bias="0.3"
             app:srcCompat="@drawable/book_01" />
 
         <TextView
             android:id="@+id/book_rank"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp"
+            android:padding="5dp"
             android:text="1위"
             android:textAlignment="center"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/book_image_B"
-            app:layout_constraintEnd_toEndOf="@+id/book_image_B"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/book_image_B"
-            app:layout_constraintTop_toTopOf="@+id/guideline15" />
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/book_image_B"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/book_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="70dp"
-            android:maxLines="2"
+            android:layout_marginBottom="5dp"
+            android:maxLines="3"
             android:text="골든아워 1"
             android:textAlignment="center"
-            android:textSize="15sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/book_author"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/book_image_B" />
+            app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
         <TextView
             android:id="@+id/book_author"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:maxLines="1"
+            android:layout_marginBottom="5dp"
+            android:maxLines="2"
             android:text="이국종"
             android:textAlignment="center"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toTopOf="@+id/book_date"
             app:layout_constraintEnd_toEndOf="@+id/book_name"
-            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/book_name"
-            app:layout_constraintTop_toBottomOf="@+id/book_image_B" />
+            app:layout_constraintTop_toBottomOf="@+id/book_name" />
 
         <TextView
             android:id="@+id/book_date"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:maxLines="1"
             android:text="2018.10.02"
             android:textAlignment="center"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/book_name"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/book_name"
             app:layout_constraintTop_toBottomOf="@+id/book_author" />
 
@@ -92,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="1" />
+            app:layout_constraintGuide_percent="0.65" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline15"
