--- a/app/src/main/res/layout/home_04_re.xml
+++ b/app/src/main/res/layout/home_04_re.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_04_re_cardview"
@@ -68,4 +68,4 @@
             app:layout_constraintEnd_toEndOf="@+id/home_04_re_time"
             app:layout_constraintTop_toTopOf="@+id/home_04_re_main" />
     </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
