--- a/app/src/main/res/layout/home_04_chatting.xml
+++ b/app/src/main/res/layout/home_04_chatting.xml
@@ -135,10 +135,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/home_04_chatting_re"
         app:layout_constraintEnd_toEndOf="@+id/home_04_chatting_re"
         app:layout_constraintStart_toStartOf="@+id/home_04_chatting_re"
-        app:layout_constraintTop_toBottomOf="@+id/view20"
-        app:SpinKit_Color="@color/colorAccent"/>
+        app:layout_constraintTop_toBottomOf="@+id/view20" />
 
 </android.support.constraint.ConstraintLayout>
