--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -224,13 +224,13 @@
 
         <ImageView
             android:id="@+id/home_04_chat_main_me_image"
-            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
+            android:clickable="true"
             android:maxWidth="200dp"
             android:padding="7dp"
             android:paddingStart="10dp"
@@ -259,7 +259,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3" />
+            app:layout_constraintGuide_percent=".3" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
