--- a/app/src/main/res/layout/sign_in_02.xml
+++ b/app/src/main/res/layout/sign_in_02.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sign_in_02_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -134,9 +134,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:hint="비밀번호 입력"
-        android:maxLines="1"
         android:inputType="textPassword"
         android:maxLength="15"
+        android:maxLines="1"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
