--- a/app/src/main/res/layout/chatbot_msglist.xml
+++ b/app/src/main/res/layout/chatbot_msglist.xml
@@ -18,14 +18,11 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/chat_you"
             android:maxWidth="200dp"
             android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/chat_bot_image"
-            app:layout_constraintTop_toBottomOf="@+id/chat_bot_nick"
-            app:layout_constraintVertical_bias="0.602" />
+            app:layout_constraintTop_toBottomOf="@+id/chat_bot_nick" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/chat_bot_image"
@@ -60,13 +57,27 @@
             app:layout_constraintBottom_toBottomOf="@+id/leftText"
             app:layout_constraintStart_toEndOf="@+id/leftText" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/chat_bot_ReRe"
+            android:layout_width="0dp"
+            android:layout_height="300dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/leftText" />
+
     </android.support.constraint.ConstraintLayout>
 
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/user_message"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/rightText"
@@ -75,14 +86,16 @@
             android:layout_alignParentEnd="true"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/chat_me"
             android:maxWidth="200dp"
             android:padding="8dp"
+            android:textAlignment="viewEnd"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/chat_bot_time_me"
