--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -8,7 +8,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_me"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline25"
@@ -60,7 +61,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_you"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/time_you"
@@ -157,13 +159,13 @@
 
         <ImageView
             android:id="@+id/home_04_chat_main_image"
-            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:clickable="true"
             android:maxWidth="200dp"
             android:padding="7dp"
             android:paddingStart="10dp"
@@ -207,8 +209,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_me_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/time_me_image"
@@ -223,8 +224,8 @@
 
         <ImageView
             android:id="@+id/home_04_chat_main_me_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
@@ -259,6 +260,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent=".3" />
+
+        <ProgressBar
+            android:id="@+id/home_04_chatting_progress_me"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main_me_image"
+            app:layout_constraintEnd_toEndOf="@+id/home_04_chat_main_me_image"
+            app:layout_constraintStart_toStartOf="@+id/home_04_chat_main_me_image"
+            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main_me_image" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
