--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -133,8 +133,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_you_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/time_you_image"
@@ -159,8 +158,8 @@
 
         <ImageView
             android:id="@+id/home_04_chat_main_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
@@ -204,12 +203,25 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.7" />
 
+        <ProgressBar
+            android:id="@+id/home_04_chatting_progress_you"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateDuration="2000"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main_image"
+            app:layout_constraintEnd_toEndOf="@+id/home_04_chat_main_image"
+            app:layout_constraintStart_toStartOf="@+id/home_04_chat_main_image"
+            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main_image" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_me_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/time_me_image"
@@ -263,6 +275,7 @@
 
         <ProgressBar
             android:id="@+id/home_04_chatting_progress_me"
+            android:indeterminateDuration="2000"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
