--- a/app/src/main/res/layout/home_drawer.xml
+++ b/app/src/main/res/layout/home_drawer.xml
@@ -173,4 +173,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/home_drawer_question" />
 
+        <ProgressBar
+            android:id="@+id/home_drower_progress"
+            android:indeterminateDuration="2000"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/view9"
+            app:layout_constraintEnd_toEndOf="@+id/home_drawer_profile"
+            app:layout_constraintStart_toStartOf="@+id/home_drawer_profile"
+            app:layout_constraintTop_toTopOf="@+id/home_drawer_profile" />
+
 </android.support.constraint.ConstraintLayout>
