--- a/app/src/main/res/layout/home_02_01.xml
+++ b/app/src/main/res/layout/home_02_01.xml
@@ -196,6 +196,22 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.9" />
 
+            <ProgressBar
+                android:id="@+id/home_02_01_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:indeterminateDuration="2000"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/home_02_01_book_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </android.support.constraint.ConstraintLayout>
 
     </ScrollView>
