--- a/app/src/main/res/layout/home_02_02.xml
+++ b/app/src/main/res/layout/home_02_02.xml
@@ -263,6 +263,20 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline23"
                 app:layout_constraintTop_toBottomOf="@+id/home_02_02_main" />
 
+            <ProgressBar
+                android:id="@+id/home_02_02_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/home_02_02_book_name"
+                app:layout_constraintEnd_toStartOf="@+id/guideline24"
+                app:layout_constraintStart_toStartOf="@+id/guideline23"
+                app:layout_constraintTop_toBottomOf="@+id/view15" />
+
 
         </android.support.constraint.ConstraintLayout>
 
