--- a/app/src/main/res/layout/home_02_re_02.xml
+++ b/app/src/main/res/layout/home_02_re_02.xml
@@ -82,6 +82,21 @@
             app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
             app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_author_T" />
 
+        <ProgressBar
+            android:id="@+id/home_02_progress"
+            android:indeterminateDuration="2000"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/home_02_re_book_name_T"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
