--- a/app/src/main/res/layout/home_04_chatting.xml
+++ b/app/src/main/res/layout/home_04_chatting.xml
@@ -51,6 +51,7 @@
         android:background="@color/trans"
         android:scaleType="fitCenter"
         android:src="@drawable/menu_00"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
