--- a/app/src/main/res/layout/home_02_re_01.xml
+++ b/app/src/main/res/layout/home_02_re_01.xml
@@ -208,5 +208,16 @@
             app:layout_constraintTop_toBottomOf="@+id/mybrary_up_line"
             app:srcCompat="@drawable/closed" />
 
+        <ProgressBar
+            android:id="@+id/home_02_re_01_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/home_02_re_fropile_I"
+            app:layout_constraintEnd_toEndOf="@+id/home_02_re_fropile_I"
+            app:layout_constraintStart_toStartOf="@+id/home_02_re_fropile_I"
+            app:layout_constraintTop_toTopOf="@+id/home_02_re_fropile_I" />
+
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
